# trycast

./: .flake8  .gitignore  .pyre_configuration  LICENSE.md  Makefile  README.md  mypy.ini  pyproject.toml  tests.py  tests_forwardrefs_example.py  tests_shape_example.py  tox.ini  trycast.py
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  push-github-action.yml
benchmarks/: README.md  http_request_parsing_example__fail.py  http_request_parsing_example__success.py
benchmarks/data/: http_request_parsing_example.py
test_data/: forwardrefs_example.py  forwardrefs_example_with_import_annotations.py  forwardrefs_example_with_type_statement.py  no_forwardrefs_example.py  type_statement_example.py
trycast/: __init__.py
