[tool.poetry]
name = "trycast"
version = "0.7.1"  # publish: version
description = ""
authors = ["David Foster <david@dafoster.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://dafoster.net/projects/trycast/"
repository = "https://github.com/davidfstr/trycast"
# TODO: Create a dedicated documentation site for the trycast project
documentation = "https://dafoster.net/projects/trycast/"
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
# Python 3.7.4 is the minimum Python with typing.ForwardRef
python = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
mypy_extensions = "*"
pyright = "^1.1.230"
pyre-check = "^0.9.10"
pytype = { version = "==2022.3.21", python = ">=3.7.4,<3.10" }
tox = "^3.23.1"
black = "==22.1.0"
isort = "^5.9.1"
flake8 = "^3.9.2"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Type Checker: Mypy
# 
# Config Syntax Reference:
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
files = "trycast.py,tests.py"
mypy_path = "."
strict_optional = true

# Type Checker: Pyright
# 
# Config Syntax Reference:
[tool.pyright]
include = ["."]
pythonPlatform = "All"
#typeCheckingMode = "strict"  # TODO: try this

# Formatter: Isort
[tool.isort]
profile = "black"
atomic = true
line_length = 88
skip_glob = ["venv*", "test_data/forwardrefs_example_with_import_annotations.py", ".pytype"]

# Formatter: Black
[tool.black]
line_length = 88

# Tests
[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py37,py38,py39,py310
isolated_build = True

[testenv]
deps =
    mypy
    pytype == 2022.3.21 ; python_version < "3.10"
commands =
    python3 -m unittest

"""
