[tool.poetry]
name = "trycast"
version = "1.2.0"  # publish: version
description = ""
authors = ["David Foster <david@dafoster.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://dafoster.net/projects/trycast/"
repository = "https://github.com/davidfstr/trycast"
# TODO: Create a dedicated documentation site for the trycast project
documentation = "https://dafoster.net/projects/trycast/"
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development"
]

[tool.poetry.urls]
"Release notes" = "https://github.com/davidfstr/trycast#changelog"

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.dev-dependencies]
mypy = "*"
mypy_extensions = "*"
pyright = "*"
pyre-check = "*"
pytype = { version = "==2022.3.21", python = ">=3.7.4,<3.10" }
tox = "^3.23.1"
black = "==24.3.0"
isort = "^5.9.1"
flake8 = ">=6.0,<7.0"
coverage = "*"
# NOTE: Duplicated in: [tool.tox] > legacy_tox_ini > [testenv] > deps
typing-extensions = ">=4.11.0rc1"  # for get_type_hints() that supports ReadOnly

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Type Checker: Mypy
# 
# Config Syntax Reference:
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
files = "trycast.py,tests.py"
mypy_path = "."
strict_optional = true

# Type Checker: Pyright
# 
# Config Syntax Reference:
[tool.pyright]
include = ["."]
pythonPlatform = "All"
#typeCheckingMode = "strict"  # TODO: try this

# Formatter: Isort
[tool.isort]
profile = "black"
atomic = true
line_length = 88
skip_glob = [
    ".pytype",
    "test_data/forwardrefs_example*.py",
    "test_data/type_statement_example.py",
    "venv*",
]

# Formatter: Black
[tool.black]
line_length = 88

# Tests
[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py38,py39,py310,py311,py312
isolated_build = True

[testenv]
deps =
    mypy
    pytype == 2022.3.21 ; python_version < "3.10"
    typing-extensions >= 4.11.0rc1
commands =
    python3 -m unittest

"""
